--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p>Le site officiel de la série évènement !</p>
     </div>
     <div id="game-acces">
-      <a href="/game/index.html">Accéder au jeu officiel</a>
+      <a href="game/index.html">Accéder au jeu officiel</a>
     </div>
     <div id="title_info">
       <p>2023 | 89+ | 12 saisons | SF Comi-dramatique</p>
